OO-3488: delete comments and user ratings with user